[package]
edition = "2021"
name = "backup_dumper"
version = "0.1.0"

[dependencies]
# General
byteorder = "1.4.3"
clap = { version = "4.2.1", features = ["derive"] }
hex = "0.4.3"
miette = { version = "5.9.0", features = ["fancy"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Duplicacy
aes-gcm = { version = "0.10.1", features = ["std"] }
blake2 = "0.10.6"
lz4_flex = "0.11.1"
pbkdf2 = "0.12.1"
rmp = "0.8.11"
sha2 = "0.10.6"

# Restic
aes256ctr_poly1305aes = "0.1.1"
base64 = "0.21.0"
chrono = "0.4.26"
scrypt = "0.11.0"
zstd = { version = "0.12.3", features = ["experimental"] }

# Knoxite
aes = "0.8.2"
cfb-mode = "0.8.2"
serde_repr = "0.1"
xz2 = "0.1"
